<resources>
    <string name="app_name">Vetric</string>
    <string name="keterangan">Perkiraan biaya listrik di aplikasi Vetric merujuk pada tarif pelanggan Rumah Tangga Daya 900 VA, yakni Rp 1,352/kWh</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="logo">Vetric</string>
    <string name="textDaftar">Belum punya akun? </string>
    <string name="textLogin">Sudah punya akun? </string>
    <string name="Login">Login </string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="password2">Konfirmasi Password</string>
    <string name="first_fragment_label">hello</string>
    <string name="second_fragment_label">hello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    rekomendasi-->
    <string name="card1">Kurangi Penggunaan Lampu</string>
    <string name="card1detil">Alihkan penggunaan lampu disiang hari dan biarkan cahaya alami masuk. Ini dapat mengurangi penggunaan lampu dari konsumsi daya</string>
</resources>