<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/logo"
        android:textColor="@color/primary"
        android:fontFamily="@font/gfs_neohellenic"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDaftar1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSimpanUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDaftar2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/textInputDaftar1"
        app:layout_constraintStart_toStartOf="@id/textInputDaftar1"
        app:layout_constraintTop_toBottomOf="@id/textInputDaftar1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSimpanEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDaftar3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/textInputDaftar2"
        app:layout_constraintStart_toStartOf="@id/textInputDaftar2"
        app:layout_constraintTop_toBottomOf="@id/textInputDaftar2"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSimpanPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDaftar4"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password2"
        app:layout_constraintEnd_toEndOf="@id/textInputDaftar3"
        app:layout_constraintStart_toStartOf="@id/textInputDaftar3"
        app:layout_constraintTop_toBottomOf="@id/textInputDaftar3"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSimpanPassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/textDaftar"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/btnDaftar"
        app:layout_constraintTop_toTopOf="@id/btnDaftar"
        app:layout_constraintStart_toStartOf="@id/btnDaftar"/>

    <Button
        android:id="@+id/btnTextLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="87dp"
        android:background="@android:color/transparent"
        android:text="@string/daftar"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/btnDaftar"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="@id/btnDaftar"
        app:layout_constraintTop_toTopOf="@id/btnDaftar" />

    <Button
        android:id="@+id/btnDaftar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/lato"
        android:text="@string/daftar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textInputDaftar3"
        app:layout_constraintTop_toTopOf="@id/textInputDaftar3"
        app:layout_constraintStart_toStartOf="@id/textInputDaftar3"/>

</androidx.constraintlayout.widget.ConstraintLayout>